fixed spacing with last issues ul

--- a/issues.css
+++ b/issues.css
@@ -87,6 +87,9 @@
 div.content > div:last-of-type {
 	margin-bottom: 3rem;
 }
+div.content > div:last-of-type > ul {
+	margin-top: 1.5rem;
+}
 .arrow {
 
 }
